
2007-05-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, app_data.h, gnome_frame.c, 
		gnome_options.c, Makefile.am, options.c, 
		gnome-xvidcap.glade: initial version of
		"minimize to tray" (rfe # 1520188), fix
		for bug # 1711808 and bug # 1709369
	* src: eggtrayicon.c, eggtrayicon.h: forgot to
		add for previous commit

2007-05-02  Vincenzo Reale <smart2128@baslug.org>
	* po/it.po: updated Italian translation

2007-05-01  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: app_data.c, app_data.h, gnome_options.c:
		add error msg for mono vorbis audio as ffmpeg
		only supports stereo atm.
	* src/app_data.c, doc/xvidcap/C/xvidcap.xml, 
		doc/xvidcap/C/xvidcap.xml.pot, 
		doc/xvidcap/de/xvidcap.xml-de.po, 
		doc/xvidcap/it/xvidcap.xml-it.po, 
		po/en.po, po/es.po, po/de.po, po/it.po:
		change audio defaults to 44.1KHz/64Kb/2ch
		and remove tip to manually do so from docs
	
2007-04-30  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, config.h.in, src: codecs.c, codecs.h, 
		gnome_options.c: remove --enable-libvorbis
		again to use ffmpeg's internal vorbis encoder
	* configure.in, config.h.in, src: codecs.c, codecs.h, 
		gnome_ui.c, app_data.c, app_data.h: basic
		support for theora and vorbis in avi. See
		./configure --help. Also makes mp3 support 
		configurable
	* configure.in, src/app_data.h, src/gnome_ui.c:
		remove GTKVERSION and XVC_VERSION again in
		favor of GTK_CHECK_VERSION (thanks to Christian
		Marillat for pointing that out)

2007-04-25  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* Changelog, debian/changelog, debian/rules, 
		configure.in, src/gnome-xvidcap.glade, 
		doc/man/C/xvidcap.1.xml, 
		doc/man/C/xvidcap.1.xml.pot, 
		doc/man/de/xvidcap.1.xml, doc/man/it/xvidcap.1.xml, 
		doc/xvidcap/C/xvidcap.xml, 
		doc/xvidcap/C/xvidcap.xml.pot, 
		doc/xvidcap/de/xvidcap.xml-de.po, 
		doc/xvidcap/de/xvidcap.xml, 
		doc/xvidcap/it/xvidcap.xml-it.po, 
		doc/xvidcap/it/xvidcap.xml: version bump
		to 1.1.5
