@@ -1,4 +1,8 @@
 
+2007-05-12  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* src: gnome_ui.c, gnome_frame.c: fix for 
+		bug # 1713971
+
 2007-05-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* src: gnome_ui.c, app_data.h, gnome_frame.c, 
 		gnome_options.c, Makefile.am, options.c, 
@@ -7,6 +11,12 @@
 		for bug # 1711808 and bug # 1709369
 	* src: eggtrayicon.c, eggtrayicon.h: forgot to
 		add for previous commit
+	* src: gnome_ui.c, gnome_ui.h, gnome_frame.c:
+		saving screen real estate by removing
+		image in minimized form, also fixed
+		frame as undraggable while recording
+		and deiconify main control earlier
+		when stopping
 
 2007-05-02  Vincenzo Reale <smart2128@baslug.org>
 	* po/it.po: updated Italian translation
